refactor classes